clusters/the-cluster/resources/platform-requests/http-service/hello-world/http-service-configure/5058f/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/managed-by: kratix
    app.kubernetes.io/part-of: hello-world
    app.kubernetes.io/team: platform
    kratix.io/promise-name: http-service
  name: hello-world
