clusters/the-cluster/resources/platform-requests/http-service/hello-world/http-service-configure/5058f/resources/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app.kubernetes.io/managed-by: kratix
    app.kubernetes.io/part-of: hello-world
    kratix.io/promise-name: http-service
  name: hello-world-default-deny
  namespace: hello-world
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app.kubernetes.io/managed-by: kratix
    app.kubernetes.io/part-of: hello-world
    kratix.io/promise-name: http-service
  name: hello-world-allow-gateway
  namespace: hello-world
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx-gateway
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app.kubernetes.io/managed-by: kratix
    app.kubernetes.io/part-of: hello-world
    kratix.io/promise-name: http-service
  name: hello-world-allow-dns
  namespace: hello-world
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  policyTypes:
  - Egress
